fixed swap when should open bug, adjust z-index on css

--- a/mm.scss
+++ b/mm.scss
@@ -196,4 +196,5 @@ $resources: "//drupalprojects.dev/mm/images/";
     position:absolute;
     top:29px;
     left:0px;
+    z-index:8999;
 }
